cmake_minimum_required(VERSION 3.10)
if(WIN32)
  project(NSCP.Core)

  set(SRCS AssemblyInfo.cpp NSCP.h)

  string(REPLACE "/EHsc" "/EHa" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  string(REPLACE "/EHs" "/EHa" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  string(REPLACE "/MT" "/MD" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  string(REPLACE "/EHsc" "/EHa" CMAKE_CXX_FLAGS_RELWITHDEBINFO
                 ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
  string(REPLACE "/EHs" "/EHa" CMAKE_CXX_FLAGS_RELWITHDEBINFO
                 ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
  string(REPLACE "/MT" "/MD" CMAKE_CXX_FLAGS_RELWITHDEBINFO
                 ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
  string(REPLACE "/MT" "/MD" CMAKE_CXX_FLAGS_MINSIZEREL
                 ${CMAKE_CXX_FLAGS_MINSIZEREL})
  string(REPLACE "/MT" "/MD" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
  string(REPLACE "/EHsc" "/EHa" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/EHs" "/EHa" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/MTd" "/MDd" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/RTCs" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/RTCu" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  string(REPLACE "/GZ" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /clr /EHa")

  add_library(NSCP.Core MODULE ${SRCS})
  set_library_out_folder_module(NSCP.Core)

  set_target_properties(NSCP.Core PROPERTIES FOLDER "libraries/dotnet")
  install(TARGETS NSCP.Core DESTINATION .)

endif(WIN32)
