cmake_minimum_required(VERSION 2.6)

SET(TARGET expression_parser)

SET(SRCS
	${NSCP_INCLUDEDIR}/parsers/expression/expression.cpp
)
IF(WIN32)
	SET(SRCS ${SRCS}
		${NSCP_INCLUDEDIR}/parsers/expression/expression.hpp
	)
ENDIF(WIN32)

ADD_LIBRARY(${TARGET} STATIC ${SRCS})
TARGET_LINK_LIBRARIES(${TARGET} nscp_protobuf)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "libraries")
IF(CMAKE_COMPILER_IS_GNUCXX)
	IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS -fPIC)
	ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)


IF(GTEST_FOUND)
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
	SET(SRCS
		expression_test.cpp
	)
	NSCP_MAKE_EXE_TEST(${TARGET}_test ${SRCS})
	NSCP_ADD_TEST(${TARGET}_test ${TARGET}_test)
	TARGET_LINK_LIBRARIES(${TARGET}_test
		${GTEST_GTEST_LIBRARY}
		${GTEST_GTEST_MAIN_LIBRARY}
		${TARGET}
	)
ENDIF(GTEST_FOUND)
